# microserver-c

./: .gitignore  README.md  dep.sh  meson.build  meson_options.txt
scripts/: ab-get.sh  ab-post.sh  apigen.sh  auth.sh  common.sh  post.sh  predepend.sh
scripts/json/: item-id-array.json  statops.json  tagattr.json
src/: main.cpp
src/db/: connector.cpp  connector.h  db-model.cpp  meson.build  repository.cpp
src/db/model/: tag_attr.cpp
src/include/crypto/: objectid.h
src/include/db/: connector.h  db-driver.h  db-model.h  model-generic.h
src/include/db/model/: tag_attr.h  util.h
src/include/seal/: api.h  config.h  service.h
src/include/util/: prog_opts.h
src/lib/: meson.build
src/lib/crypto/: objectid.cpp
src/lib/util/: prog_opts.cpp
src/server/: auth.cpp  meson.build  public.cpp  restapi.cpp  restapi.h  restapi_impl.cpp  service.cpp
src/specs/: README.md  auth-api.yaml  main-api-server.cpp  main-api.yaml  models-brief.yaml  public-api.yaml  rest.yaml  test-api.yaml
src/specs/.openapi-generator/: FILES
src/specs/api/: ApiBase.h  DefaultApi.cpp  DefaultApi.h
src/specs/impl/: DefaultApiImpl.cpp  DefaultApiImpl.h
src/specs/model/: Counter.cpp  Counter.h  GpsPos.cpp  GpsPos.h  Helpers.cpp  Helpers.h  IdKind.cpp  IdKind.h  ItemId.cpp  ItemId.h  ItemIdArray.cpp  ItemIdArray.h  ItemIdList.cpp  ItemIdList.h  ItemKey.cpp  ItemKey.h  KeyVal.cpp  KeyVal.h  ListCommon.cpp  ListCommon.h  PageInfo.cpp  PageInfo.h  Signature.cpp  Signature.h  StatElement.cpp  StatElement.h  StatList.cpp  StatList.h  StatOperation.cpp  StatOperation.h  Stats.cpp  Stats.h  TagAttr.cpp  TagAttr.h  _auth_echo_post_200_response.cpp  _auth_echo_post_200_response.h  _auth_echo_post_request.cpp  _auth_echo_post_request.h  _echo_post_200_response.cpp  _echo_post_200_response.h  (+8 more)
subprojects/: jwt-cpp.wrap  mongo-c.wrap  nlohmann.wrap  pistache.wrap  soci.wrap
tests/: meson.build  test_objectid.cpp
tests/unit/py/openapi/: README.md  pyproject.toml  setup.py
tests/unit/py/openapi/.openapi-generator/: FILES
tests/unit/py/openapi/docs/: Counter.md  DefaultApi.md  GpsPos.md  IdKind.md  ItemId.md  ItemIdArray.md  ItemIdList.md  ItemKey.md  KeyVal.md  ListCommon.md  PageInfo.md  Signature.md  StatElement.md  StatList.md  StatOperation.md  Stats.md  TagAttr.md  TestGetGet200Response.md
tests/unit/py/openapi/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
tests/unit/py/openapi/openapi_client/api/: default_api.py
tests/unit/py/openapi/openapi_client/models/: __init__.py  counter.py  gps_pos.py  id_kind.py  item_id.py  item_id_array.py  item_id_list.py  item_key.py  key_val.py  list_common.py  page_info.py  signature.py  stat_element.py  stat_list.py  stat_operation.py  stats.py  tag_attr.py  test_get_get200_response.py
tests/unit/py/openapi/test/: test_counter.py  test_default_api.py  test_gps_pos.py  test_id_kind.py  test_item_id.py  test_item_id_array.py  test_item_id_list.py  test_item_key.py  test_key_val.py  test_list_common.py  test_page_info.py  test_signature.py  test_stat_element.py  test_stat_list.py  test_stat_operation.py  test_stats.py  test_tag_attr.py  test_test_get_get200_response.py
