dir_specs = meson.project_source_root() / 'src/specs'
dir_src = meson.project_source_root() / 'src/server'

http_stub_sources = [
  dir_specs / 'api/DefaultApi.cpp',
  dir_specs / 'model/Helpers.cpp',
  dir_specs / 'model/_public_hello_get_200_response.cpp',
  dir_specs / 'model/_auth_echo_post_request.cpp',
  dir_specs / 'model/_auth_echo_post_200_response.cpp',
  dir_specs / 'model/Counter.cpp',
  dir_specs / 'model/GpsPos.cpp',
  dir_specs / 'model/IdKind.cpp',
  dir_specs / 'model/ItemId.cpp',
  dir_specs / 'model/ItemIdArray.cpp',
  dir_specs / 'model/ItemIdList.cpp',
  dir_specs / 'model/ItemKey.cpp',
  dir_specs / 'model/KeyVal.cpp',
  dir_specs / 'model/ListCommon.cpp',
  dir_specs / 'model/Signature.cpp',
  dir_specs / 'model/StatElement.cpp',
  dir_specs / 'model/StatList.cpp',
  dir_specs / 'model/StatOperation.cpp',
  dir_specs / 'model/Stats.cpp',
  dir_src / 'service.cpp',
  dir_src / 'auth.cpp',
  dir_src / 'restapi.cpp',
]

# Unit test
#
if not meson.is_subproject()
  
endif
